<resources>
    <string name="app_name">TheJavaGrotto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome!</string>
    <string name="the_java_grotto">The Java Grotto</string>
    <string name="locate_shop">Locate A Shop</string>
    <string name="call_cafe">Call A Cafe</string>
    <string name="cafes_for_you">Cafes For You</string>
    <string name="call">Call</string>
    <string name="contact">Contact Us</string>
    <string name="email">Email</string>
    <string name="text">Text</string>
    <string name="credits">Credits</string>
    <string name="contact_email">thejavagrotto@coffee.ca</string>
</resources>