<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_colour"
    android:orientation="vertical"
    tools:context=".ContactFragment">

    <TextView
        android:id="@+id/contactTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/background_colour"
        android:fontFamily="@font/bad_script"
        android:paddingTop="20dp"
        android:text="@string/contact"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/main_title_font"
        android:textStyle="bold" />

    <Button
        android:id="@+id/callContactButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:backgroundTint="@color/brown1"
        android:padding="15dp"
        android:text="@string/call"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/emailContactButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:backgroundTint="@color/brown1"
        android:padding="15dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/coffeeImage"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_weight="16"
        android:src="@drawable/nitro" />

</LinearLayout>