<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_colour"
    android:orientation="vertical"
    tools:context=".ShopsFragment">

    <TextView
        android:id="@+id/shopsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_colour"
        android:fontFamily="@font/bad_script"
        android:paddingTop="20dp"
        android:text="@string/cafes_for_you"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/main_title_font"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_colour"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/locateCafe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/bad_script"
            android:padding="15dp"
            android:text="@string/locate_shop"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/title_two_size" />

        <Button
            android:id="@+id/locateShopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/brown1"
            android:padding="15dp"
            android:text="Website"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_colour"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/callCafe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/text_variant"
            android:fontFamily="@font/bad_script"
            android:padding="15dp"
            android:shadowColor="@color/brown2"
            android:text="@string/call_cafe"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/title_two_size" />

        <Button
            android:id="@+id/callCafeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/brown1"
            android:padding="15dp"
            android:text="@string/call"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

    <ImageView
        android:id="@+id/javaGrotto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_colour"
        android:src="@drawable/javagrottolauncher" />

</LinearLayout>